# sonar-scan

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build-dist.sh  build-test-all-dist.sh  build.sh  bump-version.sh  download-sonar-scanner.sh  index.html  integration-tests.sh  release.sh  scan.cmd  scan.ps1  scan.sh
resources/sonar-scanner-cli/: sha256.txt  sonar-scanner-cli.jar.version.txt
src/: main.rs  options.rs  props.rs  resolve.rs  sonar_scanner_cli.rs
