[package]
name = "sonar-scan"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = "3.3.0"
zip = "8.6.0"
chrono = "0.4"
sha2 = "0.11.0"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3.27.0"
regex = "1.12.4"

[features]
integration-tests = []
