[package]
name = "sonar-scan"
version = "1.4.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
chrono = "0.4"
dirs = "5.0.1"
flate2 = "1"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4"
ureq = "3.3.0"
zip = "8.6.0"

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3.27.0"

[features]
integration-tests = []
